CREATE TYPE "UserRole" AS ENUM (
  'SUPER_ADMIN',
  'CLINIC_ADMIN',
  'VETERINARIAN',
  'RECEPTIONIST',
  'OWNER'
);

CREATE TYPE "ClinicStatus" AS ENUM (
  'ACTIVE',
  'INACTIVE',
  'SUSPENDED',
  'ARCHIVED'
);

CREATE TYPE "PetSex" AS ENUM (
  'MALE',
  'FEMALE'
);

CREATE TYPE "PetStatus" AS ENUM (
  'ACTIVE',
  'DECEASED',
  'MISSING',
  'ADOPTED',
  'ARCHIVED'
);

CREATE TYPE "PetImageType" AS ENUM (
  'PROFILE',
  'MEDICAL',
  'AI_SCREENING',
  'FOLLOW_UP',
  'OTHER'
);

CREATE TYPE "AppointmentStatus" AS ENUM (
  'PENDING',
  'CONFIRMED',
  'CHECKED_IN',
  'IN_PROGRESS',
  'COMPLETED',
  'CANCELLED',
  'NO_SHOW'
);

CREATE TYPE "AppointmentType" AS ENUM (
  'CONSULTATION',
  'FOLLOW_UP',
  'VACCINATION',
  'AI_REVIEW',
  'EMERGENCY'
);

CREATE TYPE "DiagnosisStatus" AS ENUM (
  'PRELIMINARY',
  'CONFIRMED',
  'CHRONIC',
  'RESOLVED'
);

CREATE TYPE "AttachmentType" AS ENUM (
  'IMAGE',
  'PDF',
  'XRAY',
  'LAB_RESULT',
  'DOCUMENT',
  'OTHER'
);

CREATE TYPE "MedicineType" AS ENUM (
  'ANTIBIOTIC',
  'ANTIFUNGAL',
  'ANTI_PARASITIC',
  'ANTI_INFLAMMATORY',
  'VITAMIN',
  'SHAMPOO',
  'TOPICAL',
  'OTHER'
);

CREATE TYPE "AdministrationRoute" AS ENUM (
  'ORAL',
  'TOPICAL',
  'INJECTION',
  'SUBCUTANEOUS',
  'INTRAMUSCULAR',
  'INTRAVENOUS',
  'EAR',
  'EYE',
  'OTHER'
);

CREATE TYPE "DiseaseSeverity" AS ENUM (
  'LOW',
  'MODERATE',
  'HIGH',
  'UNKNOWN'
);

CREATE TYPE "AIScreeningStatus" AS ENUM (
  'PENDING_REVIEW',
  'REVIEWED',
  'CONFIRMED',
  'DISMISSED'
);

CREATE TYPE "AIImageType" AS ENUM (
  'ORIGINAL',
  'CROPPED',
  'PREPROCESSED',
  'ANNOTATED'
);

CREATE TYPE "NotificationType" AS ENUM (
  'APPOINTMENT_CREATED',
  'APPOINTMENT_CONFIRMED',
  'APPOINTMENT_CANCELLED',
  'APPOINTMENT_REMINDER',
  'CONSULTATION_AVAILABLE',
  'PRESCRIPTION_AVAILABLE',
  'VACCINATION_REMINDER',
  'AI_SCREENING_COMPLETED',
  'AI_SCREENING_REVIEWED',
  'SYSTEM'
);

CREATE TYPE "AuditAction" AS ENUM (
  'CREATE',
  'UPDATE',
  'DELETE',
  'LOGIN',
  'LOGOUT',
  'REGISTER',
  'PASSWORD_CHANGE',
  'PASSWORD_RESET',
  'AI_SCREENING',
  'BOOK_APPOINTMENT',
  'EXPORT_REPORT'
);

CREATE TABLE "USER" (
  "USR_ID" uuid PRIMARY KEY,
  "USR_EMAIL" varchar(255) UNIQUE NOT NULL,
  "USR_PASSWORD_HASH" varchar(255) NOT NULL,
  "USR_ROLE" "UserRole" NOT NULL,
  "USR_FIRST_NAME" varchar(100) NOT NULL,
  "USR_LAST_NAME" varchar(100) NOT NULL,
  "USR_PHONE" varchar(20),
  "USR_IS_ACTIVE" boolean,
  "USR_EMAIL_VERIFIED" boolean,
  "USR_MUST_CHANGE_PASSWORD" boolean,
  "USR_LAST_LOGIN" timestamp,
  "USR_CREATED_AT" timestamp,
  "USR_UPDATED_AT" timestamp,
  "USR_DELETED_AT" timestamp
);

CREATE TABLE "CLINIC" (
  "CLN_ID" uuid PRIMARY KEY,
  "CLN_NAME" varchar(255) UNIQUE NOT NULL,
  "CLN_EMAIL" varchar(255) UNIQUE,
  "CLN_PHONE" varchar(20),
  "CLN_ADDRESS" text,
  "CLN_LOGO_URL" text,
  "CLN_LICENSE_NO" varchar(100),
  "CLN_STATUS" "ClinicStatus",
  "CLN_CREATED_AT" timestamp,
  "CLN_UPDATED_AT" timestamp,
  "CLN_DELETED_AT" timestamp
);

CREATE TABLE "CLINIC_SETTINGS" (
  "CLS_ID" uuid PRIMARY KEY,
  "CLN_ID" uuid NOT NULL,
  "CLS_OPENING_TIME" time,
  "CLS_CLOSING_TIME" time,
  "CLS_APPOINTMENT_DURATION" integer,
  "CLS_MAX_APPOINTMENTS_PER_DAY" integer,
  "CLS_ALLOW_OWNER_BOOKING" boolean,
  "CLS_CREATED_AT" timestamp,
  "CLS_UPDATED_AT" timestamp
);

CREATE TABLE "STAFF_PROFILE" (
  "STF_ID" uuid PRIMARY KEY,
  "USR_ID" uuid NOT NULL,
  "CLN_ID" uuid NOT NULL,
  "STF_LICENSE_NUMBER" varchar(100),
  "STF_CREATED_AT" timestamp,
  "STF_UPDATED_AT" timestamp
);

CREATE TABLE "OWNER_PROFILE" (
  "OWN_ID" uuid PRIMARY KEY,
  "USR_ID" uuid NOT NULL,
  "OWN_ADDRESS" text,
  "OWN_PROFILE_IMAGE" text,
  "OWN_CREATED_AT" timestamp,
  "OWN_UPDATED_AT" timestamp
);

CREATE TABLE "BREED" (
  "BRD_ID" uuid PRIMARY KEY,
  "BRD_NAME" varchar(100) UNIQUE NOT NULL,
  "BRD_DESCRIPTION" text,
  "BRD_CREATED_AT" timestamp,
  "BRD_UPDATED_AT" timestamp
);

CREATE TABLE "PET" (
  "PET_ID" uuid PRIMARY KEY,
  "OWN_ID" uuid NOT NULL,
  "BRD_ID" uuid NOT NULL,
  "PET_NAME" varchar(100) NOT NULL,
  "PET_SEX" "PetSex" NOT NULL,
  "PET_STATUS" "PetStatus" NOT NULL,
  "PET_BIRTH_DATE" date,
  "PET_WEIGHT" decimal(5,2),
  "PET_COLOR" varchar(100),
  "PET_MICROCHIP_NO" varchar(100) UNIQUE,
  "PET_CREATED_AT" timestamp,
  "PET_UPDATED_AT" timestamp,
  "PET_DELETED_AT" timestamp
);

CREATE TABLE "PET_IMAGE" (
  "PTI_ID" uuid PRIMARY KEY,
  "PET_ID" uuid NOT NULL,
  "PTI_IMAGE_URL" text NOT NULL,
  "PTI_IMAGE_TYPE" "PetImageType" NOT NULL,
  "PTI_IS_PRIMARY" boolean,
  "PTI_CREATED_AT" timestamp
);

CREATE TABLE "APPOINTMENT" (
  "APT_ID" uuid PRIMARY KEY,
  "PET_ID" uuid NOT NULL,
  "CLN_ID" uuid NOT NULL,
  "STF_ID" uuid,
  "APT_TYPE" "AppointmentType" NOT NULL,
  "APT_STATUS" "AppointmentStatus" NOT NULL,
  "APT_SCHEDULED_AT" timestamp NOT NULL,
  "APT_REASON" text,
  "APT_CREATED_BY" uuid NOT NULL,
  "APT_CONFIRMED_AT" timestamp,
  "APT_COMPLETED_AT" timestamp,
  "APT_CANCELLED_AT" timestamp,
  "APT_CREATED_AT" timestamp,
  "APT_UPDATED_AT" timestamp,
  "APT_DELETED_AT" timestamp
);

CREATE TABLE "CONSULTATION" (
  "CON_ID" uuid PRIMARY KEY,
  "APT_ID" uuid UNIQUE NOT NULL,
  "STF_ID" uuid NOT NULL,
  "CON_CHIEF_COMPLAINT" text,
  "CON_SUBJECTIVE" text,
  "CON_OBJECTIVE" text,
  "CON_ASSESSMENT" text,
  "CON_PLAN" text,
  "CON_DIAGNOSIS" text NOT NULL,
  "CON_DIAGNOSIS_STATUS" "DiagnosisStatus",
  "CON_TREATMENT" text,
  "CON_NOTES" text,
  "CON_CREATED_AT" timestamp,
  "CON_UPDATED_AT" timestamp
);

CREATE TABLE "CONSULTATION_ATTACHMENT" (
  "CAT_ID" uuid PRIMARY KEY,
  "CON_ID" uuid NOT NULL,
  "CAT_FILE_URL" text NOT NULL,
  "CAT_FILE_NAME" varchar(255),
  "CAT_FILE_TYPE" "AttachmentType",
  "CAT_FILE_SIZE" integer,
  "CAT_UPLOADED_AT" timestamp
);

CREATE TABLE "PRESCRIPTION" (
  "PRS_ID" uuid PRIMARY KEY,
  "CON_ID" uuid NOT NULL,
  "STF_ID" uuid NOT NULL,
  "PRS_INSTRUCTIONS" text,
  "PRS_CREATED_AT" timestamp,
  "PRS_UPDATED_AT" timestamp
);

CREATE TABLE "PRESCRIPTION_ITEM" (
  "PRI_ID" uuid PRIMARY KEY,
  "PRS_ID" uuid NOT NULL,
  "PRI_MEDICINE_NAME" varchar(255) NOT NULL,
  "PRI_MEDICINE_TYPE" "MedicineType",
  "PRI_DOSAGE" varchar(100) NOT NULL,
  "PRI_FREQUENCY" varchar(100) NOT NULL,
  "PRI_DURATION" varchar(100) NOT NULL,
  "PRI_ROUTE" "AdministrationRoute",
  "PRI_QUANTITY" integer,
  "PRI_NOTES" text,
  "PRI_CREATED_AT" timestamp
);

CREATE TABLE "VACCINE" (
  "VCC_ID" uuid PRIMARY KEY,
  "VCC_NAME" varchar(255) UNIQUE NOT NULL,
  "VCC_MANUFACTURER" varchar(255),
  "VCC_DESCRIPTION" text,
  "VCC_CREATED_AT" timestamp,
  "VCC_UPDATED_AT" timestamp
);

CREATE TABLE "VACCINATION_RECORD" (
  "VAC_ID" uuid PRIMARY KEY,
  "CON_ID" uuid NOT NULL,
  "PET_ID" uuid NOT NULL,
  "STF_ID" uuid NOT NULL,
  "VCC_ID" uuid NOT NULL,
  "VAC_BATCH_NO" varchar(100),
  "VAC_DOSE" varchar(100),
  "VAC_ROUTE" "AdministrationRoute",
  "VAC_DATE_GIVEN" date NOT NULL,
  "VAC_NEXT_DUE" date,
  "VAC_NOTES" text,
  "VAC_CREATED_AT" timestamp,
  "VAC_UPDATED_AT" timestamp
);

CREATE TABLE "DISEASE" (
  "DIS_ID" uuid PRIMARY KEY,
  "DIS_NAME" varchar(150) UNIQUE NOT NULL,
  "DIS_DESCRIPTION" text,
  "DIS_SEVERITY" "DiseaseSeverity",
  "DIS_CREATED_AT" timestamp
);

CREATE TABLE "AI_SCREENING" (
  "AIS_ID" uuid PRIMARY KEY,
  "PET_ID" uuid NOT NULL,
  "USR_ID" uuid NOT NULL,
  "CON_ID" uuid,
  "AIS_PRIMARY_DISEASE_ID" uuid NOT NULL,
  "AIS_PRIMARY_CONFIDENCE" decimal(5,2),
  "AIS_TOP_PREDICTIONS" jsonb,
  "AIS_MODEL_VERSION" varchar(50),
  "AIS_INFERENCE_TIME_MS" integer,
  "AIS_DEVICE" varchar(150),
  "AIS_STATUS" "AIScreeningStatus",
  "AIS_CREATED_AT" timestamp
);

CREATE TABLE "AI_SCREENING_IMAGE" (
  "ASI_ID" uuid PRIMARY KEY,
  "AIS_ID" uuid NOT NULL,
  "ASI_IMAGE_URL" text NOT NULL,
  "ASI_IMAGE_TYPE" "AIImageType",
  "ASI_CREATED_AT" timestamp
);

CREATE TABLE "NOTIFICATION" (
  "NTF_ID" uuid PRIMARY KEY,
  "USR_ID" uuid NOT NULL,
  "NTF_TITLE" varchar(255),
  "NTF_MESSAGE" text,
  "NTF_TYPE" "NotificationType",
  "NTF_IS_READ" boolean,
  "NTF_REFERENCE_TABLE" varchar(100),
  "NTF_REFERENCE_ID" uuid,
  "NTF_CREATED_AT" timestamp,
  "NTF_READ_AT" timestamp
);

CREATE TABLE "AUDIT_LOG" (
  "ADL_ID" uuid PRIMARY KEY,
  "USR_ID" uuid NOT NULL,
  "ADL_ACTION" "AuditAction",
  "ADL_MODULE" varchar(100),
  "ADL_TABLE_NAME" varchar(100),
  "ADL_RECORD_ID" uuid,
  "ADL_DESCRIPTION" text,
  "ADL_OLD_VALUES" jsonb,
  "ADL_NEW_VALUES" jsonb,
  "ADL_IP_ADDRESS" varchar(50),
  "ADL_DEVICE" varchar(255),
  "ADL_CREATED_AT" timestamp
);

ALTER TABLE "STAFF_PROFILE" ADD FOREIGN KEY ("USR_ID") REFERENCES "USER" ("USR_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "OWNER_PROFILE" ADD FOREIGN KEY ("USR_ID") REFERENCES "USER" ("USR_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "STAFF_PROFILE" ADD FOREIGN KEY ("CLN_ID") REFERENCES "CLINIC" ("CLN_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "CLINIC_SETTINGS" ADD FOREIGN KEY ("CLN_ID") REFERENCES "CLINIC" ("CLN_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "PET" ADD FOREIGN KEY ("OWN_ID") REFERENCES "OWNER_PROFILE" ("OWN_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "PET" ADD FOREIGN KEY ("BRD_ID") REFERENCES "BREED" ("BRD_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "PET_IMAGE" ADD FOREIGN KEY ("PET_ID") REFERENCES "PET" ("PET_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "APPOINTMENT" ADD FOREIGN KEY ("PET_ID") REFERENCES "PET" ("PET_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "APPOINTMENT" ADD FOREIGN KEY ("CLN_ID") REFERENCES "CLINIC" ("CLN_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "APPOINTMENT" ADD FOREIGN KEY ("STF_ID") REFERENCES "STAFF_PROFILE" ("STF_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "APPOINTMENT" ADD FOREIGN KEY ("APT_CREATED_BY") REFERENCES "USER" ("USR_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "CONSULTATION" ADD FOREIGN KEY ("APT_ID") REFERENCES "APPOINTMENT" ("APT_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "CONSULTATION" ADD FOREIGN KEY ("STF_ID") REFERENCES "STAFF_PROFILE" ("STF_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "CONSULTATION_ATTACHMENT" ADD FOREIGN KEY ("CON_ID") REFERENCES "CONSULTATION" ("CON_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "PRESCRIPTION" ADD FOREIGN KEY ("CON_ID") REFERENCES "CONSULTATION" ("CON_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "PRESCRIPTION" ADD FOREIGN KEY ("STF_ID") REFERENCES "STAFF_PROFILE" ("STF_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "PRESCRIPTION_ITEM" ADD FOREIGN KEY ("PRS_ID") REFERENCES "PRESCRIPTION" ("PRS_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "VACCINATION_RECORD" ADD FOREIGN KEY ("CON_ID") REFERENCES "CONSULTATION" ("CON_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "VACCINATION_RECORD" ADD FOREIGN KEY ("PET_ID") REFERENCES "PET" ("PET_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "VACCINATION_RECORD" ADD FOREIGN KEY ("STF_ID") REFERENCES "STAFF_PROFILE" ("STF_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "VACCINATION_RECORD" ADD FOREIGN KEY ("VCC_ID") REFERENCES "VACCINE" ("VCC_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "AI_SCREENING" ADD FOREIGN KEY ("PET_ID") REFERENCES "PET" ("PET_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "AI_SCREENING" ADD FOREIGN KEY ("USR_ID") REFERENCES "USER" ("USR_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "AI_SCREENING" ADD FOREIGN KEY ("CON_ID") REFERENCES "CONSULTATION" ("CON_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "AI_SCREENING" ADD FOREIGN KEY ("AIS_PRIMARY_DISEASE_ID") REFERENCES "DISEASE" ("DIS_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "AI_SCREENING_IMAGE" ADD FOREIGN KEY ("AIS_ID") REFERENCES "AI_SCREENING" ("AIS_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "NOTIFICATION" ADD FOREIGN KEY ("USR_ID") REFERENCES "USER" ("USR_ID") DEFERRABLE INITIALLY IMMEDIATE;

ALTER TABLE "AUDIT_LOG" ADD FOREIGN KEY ("USR_ID") REFERENCES "USER" ("USR_ID") DEFERRABLE INITIALLY IMMEDIATE;
